<resources>
    <string name="app_name">client</string>
    <string name="enter">Enter</string>
    <string name="registration">Registration</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="textview">TextView</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="download">Download:</string>
    <string name="remove">Remove</string>
    <string name="file_name">FILE_NAME</string>
    <string name="rename">Rename</string>
    <string name="move">Move</string>
    <string name="properties">Properties</string>
    <string name="open_in_folder">Open in folder</string>
    <string name="search">Search</string>
</resources>
