<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bottomShit"
    android:background="@drawable/bottom_sheet_background">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/file_name"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18dp"

        />

    <Button
        android:id="@+id/Rename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rename"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_red_dark"
        android:padding="10dp"
        android:background="@drawable/sheettextview"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/Move"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move"
        android:textColor="@android:color/holo_red_dark"
        android:textAllCaps="false"
        android:padding="10dp"
        android:background="@drawable/sheettextview"
        android:textAlignment="viewStart"/>

    <Button
        android:id="@+id/Prop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/properties"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_red_dark"
        android:padding="10dp"
        android:background="@drawable/sheettextview"
        android:textAlignment="viewStart"/>

    <Button
        android:id="@+id/OpenFolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/open_in_folder"
        android:textAllCaps="false"
        android:padding="10dp"
        android:background="@drawable/sheettextview"
        android:textAlignment="viewStart"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"

        android:layout_height="143dp" />

</LinearLayout>